# GameLauncher-Core

./: .gitignore  CMakeLists.txt  README.md
src/: ArchiveHandler.cpp  ArchiveHandler.h  FileSystemHandler.cpp  FileSystemHandler.h  JSONParseHandler.cpp  JSONParseHandler.h  JSONPraseHandler.cpp  JSONPraseHandler.h  main.cpp
